Fixed: table alignment

--- a/includes/better-checkout/assets/css/better-checkout.css
+++ b/includes/better-checkout/assets/css/better-checkout.css
@@ -368,8 +368,15 @@ table#edd_checkout_cart, td, tr, th {
 
 #edd_checkout_cart td, #edd_checkout_cart th {
     padding: 10px 5px;
-    min-width: 58px;
     vertical-align: middle;
+}
+
+.edd_cart_item_thumbnail {
+    min-width: 58px;
+}
+
+.edd_cart_item_name {
+    max-width: 240px;
 }
 
 #edd_checkout_wrap .edd_cart_remove_item_btn {
